Update Journal-API Paths
